Added email functionality with celery

--- a/news/templates/publish_form.html
+++ b/news/templates/publish_form.html
@@ -10,7 +10,7 @@
                 </strong>
             </div>
             {% if msg %}
-            <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 5px">
                 <div class="alert alert-success" id="message">{{msg}}</div>
             </div>
             {%endif%}
@@ -33,7 +33,7 @@
 
                         <div class="form-group col-sm-12 col-md-12 col-lg-12">
                             <label for="content">Content</label>
-                            <textarea class="form-control" type="text" rows="20" id="content" name="content" required></textarea>
+                            <textarea class="form-control" type="text" rows="20" id="content" name="content"></textarea>
                         </div>
 
                         <div class="form-group col-sm-12 col-md-12 col-lg-12">
