--- a/news/templates/index.html
+++ b/news/templates/index.html
@@ -8,8 +8,8 @@
     <!-- Blog Entries Column -->
     <div class="col-md-8">
 
-      <h1 class="my-4">Page Heading
-        <small>Secondary Text</small>
+      <h1 class="my-4">
+        <small></small>
       </h1>
 
       <!-- Blog Post -->
@@ -87,7 +87,7 @@
       <div class="card my-4">
         <h5 class="card-header">Categories</h5>
         <div class="card-body">
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-lg-6">
               <ul class="list-unstyled mb-0">
                 <li>
@@ -114,21 +114,54 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
       <!-- Side Widget -->
-      <!-- <div class="card my-4">
-        <h5 class="card-header">Side Widget</h5>
+      <div class="card my-4">
+        <h5 class="card-header">Send Email to Admin</h5>
         <div class="card-body">
-          You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+            <form name="email_form" id="email_form" action="/news/email" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                    <textarea class="form-control" type="text" id="email_content" name="email_content" required></textarea>
+                </div>
+                <button class="btn btn-fw btn-primary pull-right" type="submit" style="margin-bottom: 5px;margin-right: 36px;">Send</button>
+            </form>
         </div>
-      </div> -->
+      </div>
 
     </div>
 
   </div>
   <!-- /.row -->
 
-  {% endblock %}
+{% endblock %}
+{% block cssincludes %}
+{% endblock cssincludes %}
+{% block jsincludes %}
+<script type="text/javascript">
+ $(document).ready(function(){
+  function fetch_latest_posts(){
+    var url = "{% url 'fetch_latest_posts' last_item_id=0 %}".replace(0,'{{last_item_id}}')
+    $.ajax({
+      url :  url,
+      type: 'GET',
+      error: function() {
+          console.log("Something went wrong, could not refresh posts")
+      },
+      success: function(data) {
+        if(data.success){
+          location.reload()
+        }
+        else{
+          console.log(data.msg)
+        }
+      },
+    });
+  }
+  setInterval(function(){fetch_latest_posts();}, 30000);
+ });
+</script>
+{% endblock jsincludes %}
