--- a/news/templates/view_post.html
+++ b/news/templates/view_post.html
@@ -26,7 +26,7 @@
       <hr>
 
       <!-- Post Content -->
-      <p>{{post.content}}</p>
+      {{post.content | safe}}
       <hr>
 
       <!-- Comments Form -->
@@ -99,7 +99,7 @@
       <div class="card my-4">
         <h5 class="card-header">Categories</h5>
         <div class="card-body">
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-lg-6">
               <ul class="list-unstyled mb-0">
                 <li>
@@ -126,7 +126,7 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
