updated comment section

--- a/news/templates/view_post.html
+++ b/news/templates/view_post.html
@@ -33,12 +33,10 @@
       <div class="card my-4">
         <h5 class="card-header">Leave a Comment:</h5>
         <div class="card-body">
-          <form name="email_form" id="email_form">
             <div class="form-group">
               <textarea class="form-control" rows="3" id="post_comment" name="post_comment"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary" onclick="post_comment()">Submit</button>
-          </form>
+            <button type="button" class="btn btn-primary" onclick="save_comment()">Submit</button>
         </div>
       </div>
 
@@ -83,13 +81,13 @@
       <div class="card my-4">
         <h5 class="card-header">Send Email to Admin</h5>
         <div class="card-body">
-            <form name="email_form" id="email_form" action="/news/email" method="POST">
-                {% csrf_token %}
+            <!-- <form name="email_form" id="email_form">
+                {% csrf_token %} -->
                 <div class="form-group">
                     <textarea class="form-control" type="text" id="email_content" name="email_content" required></textarea>
                 </div>
                 <button class="btn btn-fw btn-primary pull-right" type="submit" style="margin-bottom: 5px;margin-right: 36px;">Send</button>
-            </form>
+            <!-- </form> -->
         </div>
       </div>
 
@@ -101,22 +99,23 @@
 {% endblock cssincludes %}
 {% block jsincludes %}
 <script>
-$(document).ready(function(){
-  function post_comment(){
+  function save_comment(){
     var comment = $("#post_comment").val();
     var post_id = "{{post.id}}";
     $.ajax({
-      url :  "{% url 'save_comment' %}",
-      type: 'POST',
+      url: "{% url 'save_comment' %}",
+      type: "POST",
+      data: {"comment": comment, "post_id": post_id, "csrfmiddlewaretoken": "{{ csrf_token }}"},
+      success: function (response) {
+        $("#post_comment").val('')
+        console.log(response)
+        $("#comment_section").html(response)
+        $("#comment_section").html(response)
+      },
       error: function() {
           console.log("Something went wrong")
       },
-      success: function(data) {
-        $("#post_comment").html('')
-        $("#post_comment").html(data)
-      },
     });
   }
-});
 </script>
 {% endblock jsincludes %}
