made styling changes

--- a/news/templates/index.html
+++ b/news/templates/index.html
@@ -127,7 +127,7 @@
                 <div class="form-group">
                     <textarea class="form-control" type="text" id="email_content" name="email_content" required></textarea>
                 </div>
-                <button class="btn btn-fw btn-primary pull-right" type="submit" style="margin-bottom: 5px;margin-right: 36px;">Send</button>
+                <button class="btn btn-fw btn-primary" type="submit" style="margin-bottom: 5px;float: right;">Send</button>
             </form>
         </div>
       </div>
